@@ -177,6 +177,8 @@ Standard demo
 
 * Removed spurious SQLite database configuration file.
 
+* Removed rarely used mass_setting admininstration page.
+
 
 ------------------------------------------------------------------------------
 
